# codex

./: AGENTS.md
gnb/: .gitignore  CMakeLists.txt  readme.md
gnb/apps/: mini_gnb_sim.cpp
gnb/gnb_c/: CMakeLists.txt  README.md  architecture.md
gnb/gnb_c/apps/: mini_gnb_c_sim.c
gnb/gnb_c/config/: default_cell.json  default_cell.yml  example_custom_msg3_ul.yml  example_scripted_pdcch.yml  example_scripted_schedule.yml  example_slot100.yml  example_slot300.yml
gnb/gnb_c/examples/custom_msg3Retran/: slot_40_UL_OBJ_PRACH.txt  slot_44_UL_OBJ_MSG3.txt
gnb/gnb_c/examples/custom_msg3_ul_input/: slot_30_UL_OBJ_PUCCH_SR.txt  slot_33_UL_OBJ_DATA.txt  slot_36_UL_OBJ_DATA.txt
gnb/gnb_c/examples/scripted_pdcch_input/: slot_20_UL_OBJ_PRACH.txt  slot_36_UL_OBJ_DATA.txt
gnb/gnb_c/examples/scripted_pdcch_plan/: slot_31_SCRIPT_PDCCH_UL.txt
gnb/gnb_c/examples/scripted_schedule_input/: slot_36_UL_OBJ_DATA.txt
gnb/gnb_c/examples/scripted_schedule_plan/: slot_27_SCRIPT_DL.txt  slot_34_SCRIPT_UL.txt  slot_39_SCRIPT_UL.txt
gnb/gnb_c/examples/slot100_input/: slot_40_UL_OBJ_PRACH.txt  slot_44_UL_OBJ_MSG3.txt
gnb/gnb_c/examples/slot20_input/: slot_30_UL_OBJ_PUCCH_SR.txt  slot_33_UL_OBJ_DATA.txt  slot_36_UL_OBJ_DATA.txt
gnb/gnb_c/examples/slot300_input/: slot_80_UL_OBJ_PRACH.txt  slot_84_UL_OBJ_MSG3.txt  slot_93_UL_OBJ_DATA.txt  slot_96_UL_OBJ_DATA.txt
gnb/gnb_c/src/broadcast/: broadcast_engine.c
gnb/gnb_c/src/common/: hex.c  json_utils.c  simulator.c  types.c
gnb/gnb_c/src/config/: config_loader.c
gnb/gnb_c/src/mac/: mac_ul_demux.c
gnb/gnb_c/src/metrics/: metrics_trace.c
gnb/gnb_c/src/phy_dl/: mock_dl_phy_mapper.c  msg4_builder.c
gnb/gnb_c/src/phy_ul/: mock_msg3_receiver.c  mock_prach_detector.c
gnb/gnb_c/src/radio/: mock_radio_frontend.c
gnb/gnb_c/src/scheduler/: initial_access_scheduler.c
gnb/gnb_c/src/timing/: slot_engine.c
gnb/gnb_c/src/ue/: ue_context_store.c
gnb/gnb_c/tests/: test_config.c  test_helpers.h  test_integration.c  test_mac_rrc.c  test_main.c  test_ra_manager.c
gnb/include/mini_gnb/broadcast/: broadcast_engine.hpp  pbch_ssb_builder.hpp  sib1_builder.hpp
gnb/include/mini_gnb/common/: hex.hpp  json_utils.hpp  simulator.hpp  types.hpp
gnb/include/mini_gnb/config/: config_loader.hpp
gnb/src/broadcast/: broadcast_engine.cpp  pbch_ssb_builder.cpp  sib1_builder.cpp
gnb/src/common/: hex.cpp  json_utils.cpp  simulator.cpp
gnb/src/config/: config_loader.cpp
gnb/src/mac/: mac_ul_demux.cpp
gnb/src/metrics/: metrics_trace.cpp
gnb/src/phy_dl/: mock_dl_phy_mapper.cpp  msg4_builder.cpp  rar_builder.cpp
gnb/src/phy_ul/: mock_msg3_receiver.cpp  mock_prach_detector.cpp
gnb/src/ra/: ra_manager.cpp
gnb/src/radio/: mock_radio_frontend.cpp
gnb/src/rrc/: rrc_ccch_stub.cpp
gnb/src/scheduler/: initial_access_scheduler.cpp
gnb/src/timing/: slot_engine.cpp
gnb/src/ue/: ue_context_store.cpp
gnb/tests/: test_config.cpp  test_helpers.hpp  test_integration.cpp  test_mac_rrc.cpp  test_main.cpp  test_ra_manager.cpp
gnb/tools/: first_push.sh  plot_cf32.py  setup_wsl_ubuntu.sh
gnb_c/: CMakeLists.txt  README.md  architecture.md  feature_test_guide.md  implementation_plan.md
gnb_c/apps/: mini_b210_probe_c.c  mini_gnb_c_sim.c  mini_ring_export.c  mini_ring_inspect.c  mini_ue_c.c  ngap_probe.c
gnb_c/config/: default_cell.yml  example_b210_runtime_gnb.yml  example_b210_runtime_ue.yml  example_b210_slot_backend_gnb.yml  example_custom_msg3Re.yml  example_open5gs_end_to_end_gnb.yml  example_open5gs_end_to_end_ue.yml  example_shared_slot_gnb.yml  example_shared_slot_loop.yml  example_shared_slot_ue.yml  example_slot20.yml
gnb_c/examples/: gnb_ngap.pcap
gnb_c/examples/custom_msg3Retran/: slot_20_UL_OBJ_PRACH.txt  slot_50_UL_OBJ_PUCCH_SR.txt  slot_53_UL_OBJ_DATA.txt  slot_56_UL_OBJ_DATA.txt
gnb_c/examples/custom_msg3_ul_input/: slot_24_UL_OBJ_MSG3.txt
gnb_c/examples/open5gs_ul_nas_seed/: seq_000001_ue_UL_NAS.json  seq_000002_ue_UL_NAS.json  seq_000003_ue_UL_NAS.json
gnb_c/examples/scripted_pdcch_input/: slot_33_UL_OBJ_DATA.txt
gnb_c/examples/scripted_pdcch_plan/: slot_27_SCRIPT_PDCCH_DL.txt  slot_34_SCRIPT_PDCCH_UL.txt
gnb_c/examples/scripted_schedule_input/: slot_24_UL_OBJ_MSG3.txt  slot_33_UL_OBJ_DATA.txt
gnb_c/examples/scripted_schedule_plan/: slot_31_SCRIPT_UL.txt  slot_37_SCRIPT_DL.txt
gnb_c/examples/slot100_input/: slot_20_UL_OBJ_PRACH.txt
gnb_c/examples/slot20_input/: slot_33_UL_OBJ_DATA.txt  slot_36_UL_OBJ_DATA.txt
gnb_c/examples/slot300_input/: slot_40_UL_OBJ_PRACH.txt  slot_44_UL_OBJ_MSG3.txt  slot_90_UL_OBJ_PUCCH_SR.txt  slot_96_UL_OBJ_DATA.txt
gnb_c/src/broadcast/: broadcast_engine.c
gnb_c/src/common/: json_utils.c  simulator.c  types.c
gnb_c/src/config/: config_loader.c
gnb_c/src/core/: core_session.c  gnb_core_bridge.c
gnb_c/src/link/: json_link.c  shared_slot_link.c
gnb_c/src/metrics/: metrics_trace.c
gnb_c/src/n3/: gtpu_tunnel.c  n3_user_plane.c
gnb_c/src/nas/: nas_5gs_min.c
gnb_c/src/ngap/: ngap_runtime.c  ngap_transport.c
gnb_c/src/phy_dl/: mock_dl_phy_mapper.c  rar_builder.c
gnb_c/src/ra/: ra_manager.c
gnb_c/src/radio/: air_pdu.c  b210_app_runtime.c  b210_slot_backend.c  b210_uhd_probe.c  host_performance.c  mock_radio_frontend.c  radio_frontend.c  sc16_ring_export.c  sc16_ring_map.c
gnb_c/src/rlc/: rlc_lite.c
gnb_c/src/rrc/: rrc_ccch_stub.c
gnb_c/src/scheduler/: initial_access_scheduler.c
gnb_c/src/timing/: slot_engine.c
gnb_c/src/trace/: pcap_trace.c
gnb_c/src/ue/: mini_ue_fsm.c  mini_ue_runtime.c  ue_context_store.c  ue_ip_stack_min.c  ue_tun.c
gnb_c/tests/: test_air_pdu.c  test_b210_probe.c  test_config.c  test_core_session.c  test_gnb_core_bridge.c  test_gtpu_tunnel.c  test_helpers.h  test_host_performance.c  test_integration.c  test_json_link.c  test_mac_rrc.c  test_main.c  test_mini_ue_fsm.c  test_mini_ue_runtime.c  test_n3_user_plane.c  test_nas_5gs_min.c  test_ngap_runtime.c  test_pcap_trace.c  test_radio_frontend.c  test_rlc_lite.c  test_sc16_ring_export.c  test_sc16_ring_map.c  test_shared_slot_link.c  test_ue_context_store.c  test_ue_ip_stack_min.c
(+78 files in other folders)
